Add Hero section

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -13,4 +13,8 @@
         @apply bg-background font-default text-text-body;
     }
 
+    h1,h2,h3,h4,h5 {
+        @apply text-text-titles font-display font-semibold;
+    }
+
 }
