--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -1,1 +1,13 @@
-@layer utilities {}
+@layer utilities {
+    .grid-design {
+        @apply min-h-screen grid grid-cols-4 gap-x-4 gap-y-6 auto-rows-min mx-6 xs:mx-10 sm:grid-cols-8 md:mx-12 lg:grid-cols-12;
+    }
+
+    .text-gradient {
+        background: var(--gradient-metal);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+    }
+
+}
