Add shadow hover effects to about cards

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -13,6 +13,7 @@
 
     --text-shadow: 0 2px 8px rgba(2, 132, 199, 0.15);
     --shadow: 0 0px 15px rgba(2, 132, 199, 0.10);
+    --shadow-hover: 0px 0px 25px rgba(2, 132, 199, 0.15);
 
     --gradient-metal: linear-gradient(45deg,
             #014466 0%,
