--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -1,6 +1,6 @@
 @layer utilities {
     .grid-design {
-        @apply grid grid-cols-4 gap-x-4 gap-y-6 auto-rows-min m-6 xs:m-10 sm:grid-cols-8 md:m-12 lg:grid-cols-12;
+        @apply grid grid-cols-4 gap-x-4 gap-y-6 auto-rows-min px-6 py-20 xs:px-10 sm:grid-cols-8 md:px-12 lg:grid-cols-12;
     }
 
     .text-gradient {
